# harpe

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: README.md  picker.tape
src/harpe/: __init__.py  backends.py  cli.py  config.py  describe.py  engine.py  extract.py  installhost.py  metadata.py  models.py  nativehost.py  notify.py  picker.py  rank.py  reverse.py  routing.py  sources.py
tests/: test_backends.py  test_cli_helpers.py  test_collect.py  test_engine.py  test_enumerate_images.py  test_extract.py  test_installhost.py  test_jsonld.py  test_metadata.py  test_nativehost.py  test_notify.py  test_rank.py  test_routing.py  test_select.py  test_sources.py
